--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
   "name": "elm-gen",
-  "version": "1.0.0",
   "description": "Autogenerates Elm plumbing.",
-  "main": "gen.js",
+  "version": "0.0.1",
+  "bin": {
+    "elm-gen": "bin/elm-gen.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pkamenarsky/elm-gen.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pkamenarsky/elm-gen/issues"
+  },
+  "main": "bin/elm-gen.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node bin/elm-gen.js"
   },
   "author": "Philip Kamenarsky",
-  "dependencies": {
-  }
+  "license": "BSD3"
 }
